# Connor

./: .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  tsconfig.json
.codex/: config.toml
app/: __init__.py  cli.py
app/daily/: __init__.py  account_collect.py  api.py  auth.py  candidates.py  checkpoint.py  collect_loop.py  collect_order.py  config.py  cursor_load.py  daily_publish.py  eligibility.py  enums.py  evaluate.py  evaluation_gate.py  (+17 more)
config/: x_watchlist.yaml
docs/: agent-design.md  cloudflare-tunnel.md  console-development-plan.md  console-phase1-gap.md  project-report-zh.md  project-status-2026-07-14.md  public-site.md  x-source-collection-design.md
fixtures/: public-report.json
frontend/: package-lock.json  package.json  vite.config.ts
scripts/: auto_retry_failed_collect.py  build_m1_golden_fixture.py  check_x_session.py  cleanup_2199_test_reports.py  cleanup_console_test_junk.py  clear_annotations.py  daily_and_publish.py  debug_daily_e2e.py  ensure_daily_db.py  generate_interview_tech_doc.py  go_live_checklist.ps1  import_leak_and_republish.py  register_connor_daily_task.ps1  register_connor_public_stack_task.ps1  reorder_digest_ranks.py  republish_digest_days.py  reset_daily_db.py  retry_failed_collect.py  run_daily_and_publish.ps1  run_public_stack.ps1  setup_cloudflare_tunnel.ps1  smoke_daily_pipeline.py  smoke_profile_posts.py  start_public_stack_bg.ps1
short_video/: README.md  package-lock.json  package.json  tsconfig.json
src/: constants.ts  format.ts  index.ts  login.ts  types.ts
web/: README.md  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
(+204 files in other folders)
