[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "connor"
version = "0.1.0"
description = "Connor: automated AI frontier daily digest from X watchlist to aiconnor.cn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0",
    "PyYAML>=6.0",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "langgraph>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]
checkpoint = [
    "langgraph-checkpoint-postgres>=2.0",
]
short_video = [
    "edge-tts>=6.1",
    "mutagen>=1.47",
]

[project.scripts]
connor = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
